<resources>
    <string name="app_name">Titlelogy</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!--navigation menu items-->
    <string name="nav_scoreboard">Scoreboard</string>
    <string name="nav_orderqueue">Orders Queue</string>
    <string name="nav_addorder">AddOrders</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_subclient">Create Subclient</string>
    <string name="nav_user">Create User</string>
    <string name="nav_vendor">View Vendor</string>
    <string name="nav_report">Report</string>
    <string name="nav_processing">Processing Queue</string>
    <string name="nav_pending">Pending Queue</string>
    <string name="nav_completed">Completed</string>


    <string name="nav_myorder">MyOrder</string>
    <string name="nav_viewclients">View Clients</string>
    <string name="nav_viewsubclients">View SubClients</string>


    <string name="nav_myaccount">MyAccount</string>


    <!--navigation menu items-->
    <string-array name="nav_item_activity_titles">

        <item>Scoreboard</item>
        <item>Dashboard</item>
        <item>OrdersQueue</item>
        <item>AddOrders</item>
        <item>CreateSubclient</item>
        <item>CreateUser</item>
        <item>ViewVendor</item>
        <!--<item>MyAccount</item>-->
        <item>Report</item>
    </string-array>
    <string-array name="nav_item_activity_vendortitles">
        <item>Scoreboard</item>
        <item>Dashboard</item>
        <item>MyOrder</item>
        <item>ViewSubclients</item>
        <item>ViewClients</item>
        <item>Report</item>
        <item>MyAccount</item>
    </string-array>
    <!--Edittext-->
    <string name="hint_email">Email *</string>
    <string name="errorfirstname">Enter First name</string>
    <string name="hint_password">Password *</string>
    <string name="err_msg_companyname">Enter Companyname</string>
    <string name="err_msg_customername">Enter Customername</string>
    <string name="err_msg_email">Enter Valid Email Address</string>
    <string name="err_msg_companyemail">Enter Valid CompanyEmail</string>
    <string name="err_msg_password">Enter the Password</string>
    <string name="err_msg_cnfpassword">Enter the Conform Password</string>
    <string name="err_msg_currentpassword">Enter Current password</string>
    <string name="err_msg_newpassword">Enter New password</string>
    <string name="err_msg_reenterpassword">Reenter New Password</string>
    <string name="err_msg_firstname">Enter FirstName</string>
    <string name="err_msg_borrowername">Enter BorrowerName</string>
    <string name="err_msg_orderno">Enter Orderno</string>
    <string name="err_msg_apn">Enter Apn</string>
    <string name="err_msg_description">Enter Description</string>
    <string name="err_password_confirmation">Passwords Donot Match </string>
    <string name="err_msg_search">Enter two or more characters to search</string>
    <string name="err_msg_frmdate">Select From-Date</string>
    <string name="err_msg_todate">Select To-Date</string>
    <string name="btn_login">Login</string>
    <string name="hint_ordernum">Order Number *</string>
    <string name="hint_search">Search</string>
    <string name="hint_custname">Customer Name *</string>
    <string name="hint_orderdate">Order Date *</string>
    <string name="hint_frmdate">From Date</string>
    <string name="hint_todate">To Date</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip</string>
    <string name="hint_address">Address</string>
    <string name="hint_borrowername">Borrower Name *</string>
    <string name="hint_subemail">Email *</string>
    <string name="hint_subaltemail">Alternative Email</string>
    <string name="hint_apn">Apn *</string>
    <string name="hint_discription">Description</string>
    <string name="hint_companyname">Company Name *</string>
    <string name="hint_groupemail">Company Default/Group Email *</string>
    <string name="hint_phno">Phone No</string>
    <string name="hint_fxno">Fax No</string>
    <string name="hint_alternateemail">Alternate Email</string>
    <string name="hint_firstname">First name *</string>
    <string name="hint_conpass">Confirm Password *</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_reenternewpassword">Re-Enter New Password *</string>
    <string name="hint_newpassword">New Password *</string>
    <string name="hint_currentpassword">Current Password *</string>
    <string name="hint_county">County</string>
    <string name="hint_state">State</string>
    <string name="hint_clientname">Client Name</string>
    <string name="hint_vendorname">Vendor Name</string>
    <string name="emailerror">Invalid Email</string>
    <string name="passworderror">Invalid Password</string>
    <string name="searchview">SearchOrder</string>


    <!--vendor Strings-->
    <string name="nav_scoreboard_vendor">Scoreboard</string>
    <string name="nav_processing_vendor">Processing Queue</string>
    <string name="nav_pending_vendor">Pending Queue</string>
    <string name="nav_completed_vendor">Completed</string>
    <string name="nav_orderqueue_vendor">Orders Queue</string>
    <string name="nav_addorder_vendor">Add Orders</string>
    <string name="nav_exportorder_vendor">Export Orders</string>
    <string name="nav_dashboard_vendor">Dashboard</string>
    <string name="nav_myorder_vendor">Orders</string>
    <string name="nav_viewclients_vendor">View Clients</string>
    <string name="nav_viewsubclients_vendor">View SubClients</string>
    <string name="nav_subclient_vendor">Create Subclient</string>
    <string name="nav_user_vendor">Create User</string>
    <string name="nav_report_vendor">Report</string>
    <string name="nav_myaccount_vendor">MyAccount</string>
    <string name="hint_subclient_code">Sub Client Code</string>
    <string name="hint_invoice_contact_name">Invoice Contact Name</string>
    <string name="hint_address_vendor">Address</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>

    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_share">Share</string>
    <string name="content_description" />
    <string name="menu_document">Document</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_location">Location</string>
    <string name="menu_contact">Contact</string>
    <!--scannertext-->
    <string name="file_name_text">File Name</string>
    <string name="select_images_text">Select Images</string>
    <string name="crop_images_text">Crop images</string>
    <string name="open_pdf_text">Open PDF</string>
    <string name="create_pdf_text">Create PDF</string>
    <string name="mb_button">Create PDF</string>

    <array name="items">
        <item>Open File</item>
        <item>Delete File</item>
        <item>Rename File</item>

        <item>Share File</item>
    </array>

    <array name="itemIds" translatable="false">
        <item>open</item>
        <item>delete</item>
        <item>rename</item>
        <item>print</item>
        <item>e-mail</item>
    </array>

    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_dir" translatable="false">/PDFfiles/</string>
    <string name="pdf_type" translatable="false">application/pdf</string>

    <string name="please_wait">Please Wait</string>
    <string name="populating_list">Fetching files. This may take a while</string>

    <string name="main">Main</string>
    <string name="viewFiles">View Files</string>

    <string name="toast_no_images">No Images selected</string>
    <string name="toast_name_not_blank">Name cannot be blank</string>
    <string name="toast_permissions_given">Permissions Given!</string>
    <string name="toast_insufficient_permissions">Insufficient Permissions!</string>
    <string name="toast_images_added">Images added</string>
    <string name="toast_file_renamed">File renamed.</string>
    <string name="toast_file_not_renamed">File can\'t be renamed.</string>
    <string name="toast_no_pdfs">No PDFs right now</string>
    <string name="toast_file_deleted">File deleted.</string>
    <string name="toast_file_not_deleted">File can\'t be deleted.</string>

    <string name="creating_pdf">Creating PDF</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="example">Example : abc</string>
    <string name="toast_no_pdf_app">No app to read PDF File</string>
    <string name="open_file">Open File</string>
    <string name="done">done</string>
    <string name="sort">Sort</string>
    <string name="sort_name">Name</string>
    <string name="sort_date">Date</string>
    <string name="title">PDF Actions</string>
    <string name="toast_error_getCropped">Error on getting cropped images</string>
    <string name="toast_imagecropped">Images cropped</string>
    <string name="cropImage_activityTitle">Crop image No.</string>
    <string name="snackbar_pdfCreated">PDF created!</string>
    <string name="snackbar_viewAction">View</string>
    <string name="image_options_text">Image Enhancement Options</string>
</resources>