<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/input_layout_companyname">


            <EditText
                android:textColor="#000000"
                android:textSize="14sp"
                android:backgroundTint="#C9C9C9"
                android:id="@+id/input_companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:gravity="left"
                android:hint="@string/hint_companyname" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/input_layout_groupemail">


            <EditText
                android:textColor="#000000"
                android:textSize="14sp"
                android:backgroundTint="#C9C9C9"
                android:id="@+id/input_groupemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:gravity="left"
                android:hint="@string/hint_groupemail" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/input_layout_comaddress">


            <EditText
                android:textColor="#000000"
                android:textSize="14sp"
                android:backgroundTint="#C9C9C9"
                android:id="@+id/input_comaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:gravity="left"
                android:hint="@string/hint_address" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="State *"
                android:layout_marginLeft="22dp"
                android:layout_marginBottom="5dp"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/material_comspinner1"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                app:backgroundTint="#C9C9C9"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="22dp"
                android:text="County *"
                android:layout_marginBottom="5dp"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/material_comspinner2"
                android:layout_width="fill_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_gravity="start"
                android:layout_height="40dp"
                app:backgroundTint="#C9C9C9"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/input_layout_zip">


            <EditText
                android:textColor="#000000"
                android:textSize="14sp"
                android:backgroundTint="#C9C9C9"
                android:id="@+id/input_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="left"
                android:hint="@string/hint_zip" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/input_layout_phno">


            <EditText
                android:textColor="#000000"
                android:textSize="14sp"
                android:backgroundTint="#C9C9C9"
                android:id="@+id/input_phno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="left"
                android:hint="@string/hint_phno" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/input_layout_fxno">


            <EditText
                android:textColor="#000000"
                android:textSize="14sp"
                android:backgroundTint="#C9C9C9"
                android:id="@+id/input_fxno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="left"
                android:hint="@string/hint_fxno" />


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <Button
                android:text="Save"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="60dp"
                android:gravity="center"
                android:id="@+id/button_companysave"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:theme="@style/MyButton"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>